# win_opt

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  build_release.ps1  build_release.sh  config.example.toml
.cargo/: config.toml
.claude/: settings.local.json
.serena/: project.yml
src/: animation.rs  app.rs  cleanup.rs  config.rs  error.rs  executor.rs  i18n.rs  lib.rs  logger.rs  main.rs  optimization.rs  theme.rs  types.rs  utils.rs
